--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                             Hello, I'm Amar Arjun Gaikwad,UI/UX, Web develepor and coder at Java,C++,C and many more.
                            
                         </p>
-                        <a class="btn" href="./images/Amar's Resume (7).pdf" download="Resume">Download CV</a>
+                        <a class="btn" href="./images/Amar Arjun Gaikwad Resume.pdf" download="Resume">Download CV</a>
                     </div>
                     <div class="column-2 image">
                         <img class="img-content" src="./images/tobi-profile-0.png" alt="">
